--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <p class="list-group-item-text">details of my students</p>
             </a>
         </div>
+
+        <div class="list-group">
+            <a href="/view/instagram.html" class="list-group-item">
+                <h4 class="list-group-item-heading">Instagram</h4>
+                <p class="list-group-item-text">Instagram gallery</p>
+            </a>
+        </div>
+
     </div>
 </div>
 
