--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+<session-start></session-start>
 <div ng-controller="IndexController" class="container">
 
     <div class="container hundred">
@@ -16,6 +16,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/view/register.html">Add employee</a></li>
                 <li><a href="/view/list.html">List Employee</a></li>
+                <li><a href="/view/instagram.html">Instagram gallery</a></li>
             </ol>
         </div>
     </div>
@@ -44,8 +45,9 @@
     </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-<script src="/js/index.js"></script>
+<!--<footer-dir></footer-dir>-->
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
