--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="list-group">
             <a href="/view/list.html" class="list-group-item">
                 <h4 class="list-group-item-heading">View</h4>
-                <p class="list-group-item-text">details of my students</p>
+                <p class="list-group-item-text">Details of employees</p>
             </a>
         </div>
 
